<resources>
    <string name="app_name">KmvOnline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_internet">No internet connection. Try after some time.</string>
    <string name="no_notifications">No notifications found.</string>
    <string name="welcome">Welcome</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search_results">Search Results</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="department">Department</string>
    <string name="departments">Departments</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="main_share">Share</string>
    <string name="main_my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="countinue">Continue</string>
    <string name="title_error">Title must be 1 to 100 characters long.</string>
    <string name="description_error">Description must be 1 to 1000 characters long.</string>
    <string name="date_error">Invalid date.</string>
    <string name="studentlink">or Login as a Student</string>
    <string name="new_user">New? Register Here.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="college">College</string>
    <string name="teachers">Teachers</string>
    <string name="pref_college_title">College</string>
    <string name="sync_account_type">kmvonline.shashanksingh.esy.es</string>
    <string name="content_authority">es.esy.shashanksingh.kmvonline</string>
    <string name="college_department_summary">Select the department from which you wish to receive notifications.</string>
    <string-array name="departmentsCollege">
        <item>Principal</item>
        <item>Administration</item>
        <item>Accounts</item>
        <item>Library</item>
        <item>All of the above</item>
    </string-array>
    <string-array name="departmentsCollegeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_college_department_to_be_viewed">collegeDepartments</string>
    <string name="title_activity_college_notification_detail_final">CollegeNotificationDetailFinal</string>
</resources>
