<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayoutLogin"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="120dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp">
            <android.support.design.widget.TextInputLayout
                app:counterEnabled="true"
                app:counterMaxLength="25"
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:passwordToggleEnabled="true"
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
              <EditText android:id="@+id/editTextPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/password"/>
          </android.support.design.widget.TextInputLayout>

          <android.support.v7.widget.AppCompatButton
              android:id="@+id/buttonLogin"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:foreground="?android:attr/selectableItemBackground"
              android:background="@color/colorPrimary"
              android:textColor="@android:color/white"
              android:layout_marginTop="14dp"
              android:padding="12dp"
              android:text="@string/login"/>

            <TextView android:id="@+id/linkregisteration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_user"
                android:gravity="center"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/linkStudent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/appWhite"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/appGreen"
                android:text="@string/studentlink"
                android:gravity="center"
                android:textSize="16sp"/>


        </LinearLayout>
      </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
